--- a/danmuManual.html
+++ b/danmuManual.html
@@ -10,28 +10,22 @@
 <link rel="stylesheet" href="css/time_line.css">
 </head>
 <body id="large-header" class="loading">
-	<a href="https://github.com/ownthink/robot/" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; left: 0; transform: scale(-1, 1);z-index: 10;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
+    <a href="https://greasyfork.org/zh-CN/scripts/389379" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; left: 0; transform: scale(-1, 1);z-index: 10;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
 
     <a href="https://github.com/wolf-scream/FirePowerSeek" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#70B7FD; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
     <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style> 
 <div class="contrainer">
-	<div class="w1000 header">
-		<ul class='clearfix'>
-      <!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
-      <li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;text-decoration:none;">时光轴</a></li>
-      <!-- <li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;text-decoration:none;">火力房</a></li> -->
-      <li class='float_six'><a href="https://lvlanxing.coding.me/pop/" style="color:gold;text-decoration:none;">火力房</a></li>
-      <li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;text-decoration:none;">云弹幕</a></li>
-      <!-- <li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li> -->
-      <li class='float_six'><a href="https://lvlanxing.coding.me/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
-      <!-- <li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li> -->
-      <li class='float_six'><a href="https://lvlanxing.coding.me/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
-      <li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
-      <!-- <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li> -->
-		</ul>
-	</div>
-
-	<div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.8);border-radius: 10px;">
+    <div class="w1000 header">
+        <ul class='clearfix'>
+            <li class='float_six'><a href="https://www.popzoo.xyz/" style="color:gold;text-decoration:none;">时光轴</a></li>
+            <li class='float_six'><a href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
+            <li class='float_six'><a href="https://danmu.popzoo.xyz/" style="color:gold;text-decoration:none;">云弹幕</a></li>
+            <li class='float_six'><a href="https://pop.popzoo.xyz/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
+            <li class='float_six'><a href="https://pop.popzoo.xyz/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
+            <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li>
+        </ul>
+    </div>
+    <div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.8);border-radius: 10px;">
       <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt;padding-top: 15px; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
         <span style="font-family:等线; font-size:22pt; font-weight:bold">自定义私有云弹幕教程</span></h1>
       <p style="font-size:14pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
@@ -52,7 +46,7 @@
         <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/json/cloudDanmu.json" target="_blank">点击这里</a>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_1.png"/></p>
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_1.png"/></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">Ctrl+S保存到本地为json文件格式。大家也可以下载目前公用的云弹幕，不过体积较大，而且需要格式化</span>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">（BeJson网址格式化json文本--></span>
@@ -138,14 +132,14 @@
         <span style="font-family:等线; font-size:12pt">房间类别区(如王者荣耀，和平精英、舞蹈、颜值等)，这个是根据房间的二级标题类分类的，根据您的喜欢添加响应的房间类别，比如您特别喜欢看绝地求生类的吃鸡游戏，这里可以专门定义此类弹幕，标题头写“绝地求生”，内容为“大吉大利，赶快恰鸡”，“天命圈砸脸了”……脚本会根据当前房间的二级标题，自动匹配到标题后面的弹幕内容，这也是弹幕体系最为精华的部分，因为可以因房间而异。而当您跳转到其他非绝地求生房间，则不会发送这些弹幕，进一步降低暴露人机的风险，建议大家多多备用一些经常光顾某类房间的弹幕，发送频率为1；（可以为空）</span>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 55px; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_2.png" /></p>
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_2.png" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; text-indent:-21pt; widows:0">
         <span style="font-family:Wingdings; font-size:12pt"></span>
         <span style="font-family:等线; font-size:12pt">Winning-中奖弹幕，比如参加火力全开，活动结束发现中奖名单里有自己，则会自动发送此类弹幕进行感谢房管或主播。发送频率为火力全开的结束时间点。（可以为空，但不建议，否则总会发送脚本默认-“哈哈，中奖了”）</span>
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_3.png" /></p>
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_3.png" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; text-indent:-21pt; widows:0">
         <span style="font-family:Wingdings; font-size:12pt"></span>
         <span style="font-family:等线; font-size:12pt">Noprize-没奖弹幕，和上面的正好相反，火力全开结束后发现自己没中奖，则会发送此类弹幕吐槽诉苦下下。（可以为空，但不建议，否则总发送默认-“又么得中，蓝瘦”）</span>
@@ -168,7 +162,7 @@
           </span>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify;">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_4.png"/></p>
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_4.png"/></p>
       <ol start="5" type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           <span style="font-family:等线; font-size:12pt; font-weight:bold">5.弹幕文件准备好了，还有最最关键的一步，就是把自定义私有云弹幕库，放到网络云端（您私人专用），这样无论您切换到哪台电脑（家里或单位），都可以使用自己的云弹幕库。下面把json文件的名字(如template.json)改为自己斗鱼的昵称.json（要严格一致），比如我斗鱼的昵称叫”五花肉”，那么我的自定义弹幕文件名字为“五花肉.json”，不要有空格回车等无用占位符号(如果您后期更改了斗鱼昵称，则需要重新上传新昵称的弹幕文件)。然后来到网址</span>
@@ -178,26 +172,26 @@
           <span style="font-family:等线; font-size:12pt; font-weight:bold">点击 “ 选择文件 ” ，或者将自己的文件 直接拖拽到选择文件正上方，然后 页面会自定识别并判断您的私有弹幕是否符合规则，不符合规则会提示您更改意见。</span>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_5.png"/></p>
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_5.png"/></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">符合规则则出现下面提示框。这说明您最后一步成功了，下面就可以去脚本内找个火力房间试试效果喽。目前仅支持文本5MB的内容，如果全是文本已经非常大了，一部上百万字的小说的文字量。所以尽情的用吧! </span></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_6.png"/></p>        
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_6.png"/></p>        
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">上传成功后，还需要做最最后一步，就是彻底关闭浏览器，清下缓存(注：因为采用session缓存，所以刷新浏览器还是有缓存的)，如果不重启浏览器，默认还是使用缓存的公用弹幕(或您老版的私有云弹幕)，所以这一步骤不可省略呦！回到脚本，在任意直播间刷新页面后，F12查看控制台，如果出现下图的字样，说明您的私有专属云弹幕已经被启用了，Bingo，快去开心滴玩耍吧！少年！</span></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_7.png"/></p>        
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_7.png"/></p>        
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">上传完毕弹幕后，会出现在线访问链接地址，大家可以点击看看在线弹幕内容文字是否是正常，如果出现了乱码，则需要重新编码上传，否则程序无法解析乱码文件的；</span></p>      
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_8.png"/></p>        
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_8.png"/></p>        
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">如果您的弹幕出现乱码（一般是由于编码方式导致），修改编码格式即可，用win记事本为例，点击文件-另存为，然后选择编码为utf-8保存即可，如下图所示，然后重复上面操作。最后上传成功还要记得检验呦！</span></p>      
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_9.png"/></p>        
+        <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_9.png"/></p>        
       </p>      
         <br />
 
@@ -213,12 +207,12 @@
       </p>
     </div>
     <br/>
-	<!-- <footer class="statcss" style="background-color: rgba(202,225,255,0.7);"> -->
+    <!-- <footer class="statcss" style="background-color: rgba(202,225,255,0.7);"> -->
   <footer class="statcss" style="margin-top: 30px;">
     <p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
     <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
   </footer>
-	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
+    <canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
 <script src="js/spirit_bubble.js"></script>
 </body>
