--- a/index.html
+++ b/index.html
@@ -10,51 +10,45 @@
 <link rel="stylesheet" href="css/time_line.css">
 </head>
 <body id="large-header" class="loading">
-	<a href="https://github.com/ownthink/robot/" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; left: 0; transform: scale(-1, 1);z-index: 10;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
+    <a href="https://github.com/ownthink/robot/" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; left: 0; transform: scale(-1, 1);z-index: 10;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
 
     <a href="https://github.com/wolf-scream/FirePowerSeek" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#70B7FD; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
     <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style> 
 <div class="contrainer">
-	<div class="w1000 header">
-		<ul class='clearfix'>
-			<!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
-			<li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;text-decoration:none;">时光轴</a></li>
-			<!-- <li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;text-decoration:none;">火力房</a></li> -->
-			<li class='float_six'><a href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
-			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;text-decoration:none;">云弹幕</a></li>
-			<!-- <li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li> -->
-			<li class='float_six'><a href="https://lvlanxing.coding.me/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
-			<!-- <li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li> -->
-			<li class='float_six'><a href="https://lvlanxing.coding.me/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
-			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
-			<!-- <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li> -->
-		</ul>
-	</div>
-	<div class="w1000 tc body" >
-		<p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
-		<h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨赞助，小编的孜孜矻矻！</h3>
-    	<div id="qr_code_pic" style="text-align: center; display: none;">
-    	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="300px">
-    	    <span style="margin: 0 100px;"></span>
-    	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
-    	</div>		
-		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' id="home_main_notice" style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">此处诚招广告商，代理商入驻，薅羊毛板块首页C位，为您展示自己的产品或服务无条件聚光清场，站长大人为您的广告极速加载保驾护航，如果网站挂了，也会以迅雷不及掩耳之势，通过预备方案极速切换其他线路，让您的广告屹立不倒，咬定不松！</p>
-		<div class="event_wrap clearfix">
-			<div class="middle_line"></div>
-		</div>
-	</div>
-	<footer class="statcss" style="margin-top: 30px;">
-		<p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
-		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
-	</footer>
-	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
+    <div class="w1000 header">
+        <ul class='clearfix'>
+            <li class='float_six'><a href="https://www.popzoo.xyz/" style="color:gold;text-decoration:none;">时光轴</a></li>
+            <li class='float_six'><a href="https://pop.popzoo.xyz/" style="color:gold;text-decoration:none;">火力房</a></li>
+            <li class='float_six'><a href="https://danmu.popzoo.xyz/" style="color:gold;text-decoration:none;">云弹幕</a></li>
+            <li class='float_six'><a href="https://pop.popzoo.xyz/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
+            <li class='float_six'><a href="https://pop.popzoo.xyz/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
+            <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li>
+        </ul>
+    </div>
+    <div class="w1000 tc body" >
+        <p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
+        <h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨赞助，小编的孜孜矻矻！</h3>
+        <div id="qr_code_pic" style="text-align: center; display: none;">
+            <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="300px">
+            <span style="margin: 0 100px;"></span>
+            <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
+        </div>      
+        <p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
+        <p class='header' id="home_main_notice" style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">此处诚招广告商，代理商入驻，薅羊毛板块首页C位，为您展示自己的产品或服务无条件聚光清场，站长大人为您的广告极速加载保驾护航，如果网站挂了，也会以迅雷不及掩耳之势，通过预备方案极速切换其他线路，让您的广告屹立不倒，咬定不松！</p>
+        <div class="event_wrap clearfix">
+            <div class="middle_line"></div>
+        </div>
+    </div>
+    <footer class="statcss" style="margin-top: 30px;">
+        <p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
+        <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+    </footer>
+    <canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
-<script src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/spirit_bubble.js"></script>
 <script src="https://libs.baidu.com/jquery/1.3.2/jquery.min.js"></script>
-<script src='https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/jquery.eventFlow.js'></script>
-<script type="text/javascript" src="https://www.ownthink.com/bot/js/robot.js?appid=xiaosi"></script>
+<script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/spirit_bubble.js"></script>
+<script src='https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/jquery.eventFlow.js'></script>
 <script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/timeLine.js"></script>
-<!-- <script src="timeLine.js"></script> -->
+<script src="https://www.ownthink.com/bot/js/robot.js?appid=xiaosi"></script>
 </body>
 </html>
